# mlrt

./: Cargo.toml
mldl/: Cargo.toml  README.md
mldl/src/: elf.rs  lib.rs  pe.rs  types.rs
mlsys/: Cargo.toml  README.md  build.rs
mlsys/cxx/: android.cxx  cache.cxx
mlsys/src/: lib.rs
mlsys/src/arch/: a32.rs  mod.rs  x32_64.rs
mlsys/src/core/: mod.rs
mlsys/src/platform/: mod.rs  windows.rs
mlsys/src/platform/linux/: android.rs  mappings.rs  mod.rs
src/: hook.rs  lib.rs  types.rs
src/buffer/: ext_data.rs  hooks.rs  mod.rs  trampolines.rs
src/memory/: linux.rs  mod.rs  windows.rs
src/process/: linux.rs  mod.rs
