[package]
name = "mlsys"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/gd-hyperdash/ML"

[dependencies]
libc = "0.2.125"
lazy_static = "1.4.0"
regex = "1.5.5"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies.iced-x86]
version = "1.17"
default-features = false
features = ["std", "decoder", "block_encoder", "instr_info"]

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.28.0"
features = [
    "std",
    "alloc",
    "Win32_Foundation",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies.nix]
version = "0.24.1"

[target.'cfg(target_os = "android")'.dependencies.goblin]
version = "0.5.1"

[build-dependencies]
cc = "1.0.73"